Was created localization

--- a/src/locales/kg/translation.json
+++ b/src/locales/kg/translation.json
@@ -1,3 +1,119 @@
 {
-    "ЧИСТЕЙШАЯ АРТЕЗИАНСКАЯ ВОДА ИЗ ГЛУБИН ЗЕМЛИ": "ЧИСТЕЙШАЯ АРТЕЗИАНСКАЯ ВОДА ИЗ ГЛУБИН ЗЕМЛИ"
+    "header": "Жердин түбүнөн чыккан эң таза артезиан суусу ",
+    "header-btn": "Азыр сатып алуу",
+    "nav": {
+        "nav-1": "Суу жөнүндө",
+        "nav-2": "Компания жөнүндө",
+        "nav-3": "Каталог",
+        "nav-4": "Байланыштар"
+    },
+    "about": {
+        "title": "Суу жөнүндө",
+        "block-1": {
+            "title": "Calipso суусунун сапаты",
+            "descr": "Тереңдиги 178 м артезиан скважинасынан табигый келип чыккан “Calipso” суусу. Сууну чыгаруу жана куюу боюнча завод карлуу чокулардын этегинде - Ысык-Ата тоо кыркасынын түштүк боорунда, деңиз деңгээлинен 2023 м бийиктикте жайгашкан."
+        },
+        "block-2": {
+            "title": "CALIPSOнун КАСИЕТТЕРИ ЖАНА КУРАМЫ ",
+            "descr": "Скважина таза суунун булагын ачуу үчүн бургуланган. Таза суунун ордуна хлорид-сульфат-натрий жана өзгөчө табигый рН = 7,8 бар болгон “мүрөк” ичүүчү суу табылган."
+        },
+        "block-3": {
+            "title": "КАЛИПСО — ден соолуктун булагы",
+            "descr": "Биз ар бир адам даамдуу, пайдалуу сууну ичип, ден соолугун чыңдоо мүмкүнчүлүгүнө ээ болушу үчүн иштейбиз. Экологиялуулук, тазалык, табигый пайда жана даамы Калипсо суусунун 4 идеалдуу түзүүчүсү болуп саналат. Calipso суусун үзгүлтүксүз ичкенде: (Пиктограммалар жана жазуулар) • Мээнин иштеши жакшырат • Зат алмашуу тездейт • Тери таза болот • Өндүрүмдүүлүк жогорулайт Энергия жогорулайт Булчуңдар жана сөөктөр бекемделет Токсиндер чыгарылат."
+        }
+    },
+    "history": {
+        "title": "ТАРЫХЫ",
+        "descr": "Биз “Султан фудс энд Беверенжес” ЖЧКсы – бөтөлкөдөгү ичүүчү сууну жана анын негизинде суусундуктарды чыгарган компаниябыз.\n\nCalipso 178 м тереңдиктеги артезиан скважинасынан алынган табигый келип чыккан суу. Бүгүнкү күндө дарылоочу-ашкана ичүүчү суу Calipso өзүнүн тең салмактуу курамы, жумшак даамы жана өзгөчө пайдалуу касиеттери менен керектөөчүлөрдүн сүймөнчүлүгүнө жана таануусуна ээ боло алды. Сууну чыгаруу жана куюу боюнча завод карлуу чокулардын так этегинде: Кыргызстандын Чүй облусундагы Ысык-Ата тоо кыркаларынын түштүк боорунда, деңиз деңгээлинен 2023 м бийиктикте жайгашкан. Өндүрүштүн жалпы аянты 2, 85 гектардан ашык. Таза суу булагын ачуу үчүн скважина 178 метр тереңдикке бургуланган.Таза суунун ордуна курамында хлорид - сульфат - натрий жана өзгөчө жаратылыштык pH = 7, 8 бар “мүрөк” ичүүчү суу табылган. Биздин компаниянын артыкчылыгы эмнеде: •Поляк жабдуулары. • Өзүнүн аймагы. • Казакстанга экспорттолууда. • Кенен ассортимент: газ жана газсыз минералдык суу, ошондой эле ар кандай даамдар, лимонаддар, муздак чай. Төмөнкүдөй таңгактар бар: 0, 5л, 1л, 1, 5л, 5л, 19л.•19л суу үчүн диспенсерлер бар. •Эл аралык уюмдар менен тажрыйба. • ИСО 22000. Бүгүнкү күндө биздин ишкана Кыргызстандагы эң заманбап жана экологиялык таза компаниялардын катарына кирет, ал эми Калипсо суусу - эң даамдуу жана пайдалуулардын бири."
+    },
+    "products-title": "Өндүрүм",
+    "products": {
+        "product-1": {
+            "title": "Көк чай лимон",
+            "descr": "Calipso көк чайы - бул сергек жашоо образын баалагандар жана премиум чайдын табигый даамынан ырахат алууну каалагандар үчүн эң сонун суусундук. 178 метр тереңдиктен алынган биздин суу жогорку сапаттагы жашыл чай жалбырактарын сергитерлик суусундукка айландыруу үчүн минералдардын эң жакшы балансын камсыз кылат. Сиздин чыны чайыңыз эч качан мынчалык жагымдуу болгон эмес."
+        },
+        "product-2": {
+            "title": "Газдалган суу",
+            "descr": "Calipso газдалган суусу - бул күн бою жандандыруучу жана сергитүүчү чыныгы ырахат. 178 метр тереңдиктеги суу булагыбызды колдонуп, биз назик жана табигый даамдуу сууну жаратып, ичке газ көбүкчөлөрү менен бекемдейбиз. Бул суусаганды кандыруучу же жөн гана динамикалык суусундуктарды сүйүүчүлөр үчүн идеалдуу."
+        },
+        "product-3": {
+            "title": "Газдалбаган суу",
+            "descr": "Calipso газдалбаган суу паром тазалыктын жана сергектиктин үлгүсүн билдирет. 178 метр тереңдиктен биз эң таза, минералдык тең салмактуу сууну алабыз, андан кийин анын бардык табигый касиеттерин сактап, акырын бөтөлкөгө куябыз. Бул жөнөкөй, бирок сапаттуу сууну жактыргандар үчүн идеалдуу вариант."
+        },
+        "product-4": {
+            "title": "Чоң бөтөлкө",
+            "descr": "Биздин 18,9 литр көлөмдөгү чоң бөтөлкөдөгү суу – бул чоң үй-бүлөлөр, кеңселер же иш-чаралар үчүн универсалдуу чечим. Бул 178 метр тереңдиктен алынган ошол эле кереметтүү суу, бирок ыңгайлуу чоң көлөмдө. Аны менен, ар дайым бардык муктаждыктар үчүн таза суу жетиштүү болот."     
+        }
+    },
+    "catalog": {
+        "filter": {
+            "btn-1": "Баары",
+            "btn-2": "таттуу суусундуктар",
+            "btn-3": "газдалган суусундуктар",
+            "btn-4": "Суусундуктар"
+        },
+        "btn": "Себетке кошуу",
+        "products": {
+            "title-1": "",
+            "title-2": "",
+            "title-3": "",
+            "title-4": "",
+            "title-5": "",
+            "title-6": "",
+            "title-7": "",
+            "title-8": "",
+            "title-9": "",
+            "title-10": ""
+        },
+        "carts": {
+            "price": "Наркы:",
+            "quan": "Саны:",
+            "vol": "Көлөмү:"
+        }
+    },
+    "clean-water": {
+        "title": "Таза суу",
+        "list": {
+            "list-01": "Экологиялык достук материалдар",
+            "list-02": "Калдыктарды азайтуу",
+            "list-03": "Айлана-чөйрөнү коргоого салым "
+        },
+        "descr": "ТАЗАЛОО СИСТЕМАСЫ 178 метр тереңдиктен артезиан суусу биздин өндүрүшкө келип түшөт жана көп баскычтуу тазалоо системасынан (цеолит чыпкасы, полипропилен чыпкасы, тескери осмос системасы, озонизация) өтөт. Calipso суусу жогорку натыйжалуу технология боюнча бардык эл аралык сапат стандарттарын сактоо менен куюлат. Атайын жабдуулар суу абага тийбестен 7 бакыч тазалоону жана бөтөлкөлөргө куюуну камсыз кылат. Ишканада бөтөлкөдөгү ичүүчү сууну иштеп чыгууга, өндүрүүгө, сактоого жана сатууга карата НАССР принциптерине негизделген тамак-аш азыктарынын сапатын башкаруу системасы киргизилген."
+    },
+    "form": {
+        "title": "Биз менен байланышуу",
+        "sub": "Биздин адистен кеңеш алуу",
+        "descr": "Баскычты басып, мен жеке маалыматтарды иштетүүгө жана Платформаны пайдалануу эрежелери менен макулмун",
+        "btn": "Жөнөтүү",
+        "input": {
+            "input-1": "Жеткирүү дарегин киргизиңиз",
+            "input-2": "Атыңызды киргизиңиз"
+        }
+    },
+    "cookie": {
+        "cookie-title":"Биз маалыматтарды сактоо үчүн кукилерди колдонобуз. Сайтты колдонууну улантуу менен, сиз макул болосуз",
+        "cookie-btn": "Макул"
+    },
+    "carts": {
+        "title": "Сиздин корзинада эч кандай продукт жок",
+        "descr": "корзинасы суудай жеңил сезилет. Продукцияны кошуп, артезиан суусунун даамын сезиңиз",
+        "form": "Калипсо артезиан суусуна азыр заказ кылыңыз!",
+        "price": "Жалпы суммасы",
+        "order-1": "Заказда",
+        "order-2": "буюм бар"
+    },
+    "notifications": {
+        "success": {
+            "title": "Кабарыңыз үчүн рахмат!",
+            "descr": "Биз сиздин байланыш маалыматыңызды алдык жана жакында сиз менен байланышабыз."
+        },
+        "empty": {
+            "title": "Сураныч, бардык тармактарда толтура!",
+            "descr": "Биздин байланыш борборубуз сиз менен байланышуусу үчүн форманын бардык талап кылынган талааларын толтуруңуз."
+        },
+        "error": {
+            "title": "Жөнөтүү катасы!",
+            "descr": "Кечиресиз, билдирүүңүз жөнөтүлүп жатканда ката кетти. Сураныч, кийинчерээк кайра аракет кылыңыз же колдоо тобубузга кайрылыңыз."
+        }
+    }
 }
