--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -1,3 +1,119 @@
 {
-    "textt": "ЧИСТЕЙШАЯ АРТЕЗИАНСКАЯ ВОДА ИЗ ГЛУБИН ЗЕМЛИ"
+    "header": "Чистейшая Артезианская вода из глубин земли",
+    "header-btn": "Купить сейчас",
+    "nav": {
+        "nav-1": "О воде",
+        "nav-2": "О Компании",
+        "nav-3": "Каталог",
+        "nav-4": "Контакты"
+    },
+    "about": {
+        "title": "О воде",
+        "block-1": {
+            "title": "Качество воды «Calipso",
+            "descr": "Вода «Calipso» натурального происхождения из артезианской скважины глубиной 178 м. Завод по добыче и розливу воды расположен у подножия снежных вершин - на южном склоне горного хребта Ысык-Ата, на высоте 2023 м над уровнем моря."
+        },
+        "block-2": {
+            "title": "Cвойство и составь Calipso",
+            "descr": "Скважина была пробурена, чтобы открыть источник пресной воды. Вместо пресной воды была обнаружена «живая» питьевая вода, с хлоридно-сульфатно-натриевым содержанием и уникальным природным pH = 7,8."
+        },
+        "block-3": {
+            "title": "Calipso — источник здоровья",
+            "descr": "Мы работаем для того, чтобы у каждого была возможность пить вкусную, полезную воду и быть здоровым.  Экологичность, чистота, природная польза и вкус – 4 идеальных составляющих воды Калипсо. При регулярном употреблении воды Calipso: (Пиктограммки и надписи) •  Улучшается работа мозга •  Ускоряется метаболизм •  Кожа становится чистой •  Повышается продуктивность Растет энергия Укрепляются мышцы и кости  Выводятся токсины."
+        }
+    },
+    "history": {
+        "title": "история",
+        "descr": "Мы ОсОО« Султан фудс энд Беверенжес – компания, выпускающая бутилированную питьевую воду и напитки на её основе. \n\n Вода Calipso натурального происхождения из артезианской скважины глубиной 178 м.Сегодня лечебно - столовая питьевая вода Calipso успела снискать любовь и признание потребителей, благодаря сбалансированному составу, мягкому вкусу и уникальным полезным свойствам. Завод по добыче и розливу воды расположен прямо у подножия снежных вершин: на южном склоне горного хребта Ысык - Ата в Чуйской области Кыргызстана, на высоте 2023 м над уровнем моря.Общая территория производства составляет более 2, 85 га.Скважина была пробурена на глубину 178 метров, чтобы открыть источник пресной воды.Вместо пресной воды была обнаружена« живая» питьевая вода, с хлоридно - сульфатно - натриевым содержанием и уникальным природным pH = 7, 8. В чём преимущество нашей компании: •Польское оборудование.•Собственная территория.•Уже экспортируем в Казахстан.•Широкий ассортимент: вода минеральная с газом и без газа, а также с разными вкусами, лимонады, холодный чай.Упаковки есть в наличии: 0, 5 л, 1 л, 1, 5 л, 5 л, 19 л.•Имеются в наличии диспенсеры для воды 19 л.•Опыт работы с международными организациями.•ИСО 22000. Сегодня наше предприятие в числе самых современных и экологичных компаний Кыргызстана, а вода Калипсо - одна из самых вкусных и полезных."
+    },
+    "products-title": "Продукция",
+    "products": {
+        "product-1": {
+            "title": "Зеленый чай лимон",
+            "descr": "Зеленый чай Calipso - это идеальный напиток для тех, кто ценит здоровый образ жизни и хочет наслаждаться естественным вкусом премиум-чая. Добытая с глубины 178 метров, наша вода обеспечивает наилучший баланс минералов для превращения высококачественных зеленых чайных листьев в освежающий напиток. Ваша чашка чая никогда не была такой приятной."
+        },
+        "product-2": {
+            "title": "Газированная вода",
+            "descr": "Газированная вода Calipso - это настоящее удовольствие, которое оживляет и освежает в течение всего дня. Используя наш источник воды с глубины 178 метров, мы создаем воду с нежным и естественным вкусом, усиленную тонкими пузырьками газа. Это идеальное средство для утоления жажды или просто для любителей более динамичных напитков."
+        },
+        "product-3": {
+            "title": "Негазированная вода",
+            "descr": "Негазированная вода Calipso представляет собой воплощение чистоты и свежести. С глубины 178 метров мы добываем самую чистую, балансированную по минералам воду, которую затем бережно бутилируем, сохраняя все ее природные свойства. Это идеальный вариант для тех, кто предпочитает простую, но качественную воду."
+        },
+        "product-4": {
+            "title": "Бутыль",
+            "descr": "Наша бутилированная вода в объеме 18,9 литров – это универсальное решение для больших семей, офисов или мероприятий. Это та же великолепная вода, добытая с глубины 178 метров, но в удобном большом объеме. С ней у вас всегда будет достаточно чистой воды для любых потребностей."
+        }
+    },
+    "catalog": {
+        "filter": {
+            "btn-1": "Все",
+            "btn-2": "Сладкие напитки",
+            "btn-3": "Газированные напитки",
+            "btn-4": "Питьевые напитки"
+        },
+        "btn": "Добавить в корзину",
+        "products": {
+            "title-1": "Газированная питьевая вода Calipso",
+            "title-2": "",
+            "title-3": "",
+            "title-4": "",
+            "title-5": "",
+            "title-6": "",
+            "title-7": "",
+            "title-8": "",
+            "title-9": "",
+            "title-10": ""
+        },
+        "carts": {
+            "price": "Стоимость:",
+            "quan": "Количество:",
+            "vol": "Объем:"
+        }
+    },
+    "clean-water": {
+        "title": "Чистая вода",
+        "list": {
+            "list-01": "Экологически дружелюбных материалов",
+            "list-02": "Снижение отходов",
+            "list-03": "Вклад в охрану окружающей среды"
+        },
+        "descr": "СИСТЕМА ОЧИСТКИ С глубины 178 метров артезианская вода попадает на наше производство и проходит многоступенчатую систему очистки (цеолитовый фильтр, полипропиленовый фильтр, система обратного осмоса, озонирование). Вода Calipso разливается с соблюдением всех международных стандартов качества по высокоэффективной технологии. Специальное оборудование обеспечивает 7 степеней очистки и розлив в бутылки без соприкосновения воды с воздухом. На предприятии внедрена система управления качеством пищевых продуктов на основе принципов НАССР применительно к разработке, производству, хранению и реализации бутилированной питьевой воды."
+    },
+    "form": {
+        "title": "Связаться с нами",
+        "sub": "Получить консультацию нашего специалиста",
+        "descr": "Нажимая на кнопку, я соглашаюсь на обработку персональных данных и с правилами пользования Платформой",
+        "btn": "Отправить",
+        "input": {
+            "input-1": "Введите адрес доставки",
+            "input-2": "Введите ваше имя"
+        }
+    },
+    "cookie": {
+        "cookie-title":"Мы используем файлы cookie для хранения данных. Продолжая использовать сайт, вы даете согласие",
+        "cookie-btn": "Согласен"
+    },
+    "carts": {
+        "title": "В корзине пока нет товаров",
+        "descr": "Ваша корзина ощущается легкой как вода. Добавьте продукты и наслаждайтесь вкусом артезианской воды",
+        "form": "Закажите артезианскую воду Calipso прямо сейчас!",
+        "price": "Итоговая сумма",
+        "order-1": "В заказе",
+        "order-2": "товаров"
+    },
+    "notifications": {
+        "success": {
+            "title": "Спасибо за ваше сообщение!",
+            "descr": "Мы получили ваши контактные данные и скоро свяжемся с вами."
+        },
+        "empty": {
+            "title": "Пожалуйста, заполните все поля!",
+            "descr": "Для того, чтобы наш колл-центр мог связаться с вами, пожалуйста, заполните все обязательные поля формы."
+        },
+        "error": {
+            "title": "Ошибка при отправке",
+            "descr": "К сожалению, произошла ошибка при отправке вашего сообщения. Пожалуйста, повторите попытку позже или свяжитесь с нашей службой поддержки."
+        }
+    }
 }
